# Qyra_AI-

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  prd_content.txt  qyra-docs-v2.1.html  qyra-docs-v2.5.docx  qyra_roadmap.md
.github/workflows/: ci.yml
crates/qyra-core/: Cargo.toml
crates/qyra-core/src/: config.rs  errors.rs
crates/qyra-core/src/models/: user.rs
crates/qyra-frontend/: Cargo.toml
crates/qyra-frontend/src/: main.rs
crates/qyra-relay/: Cargo.toml
crates/qyra-relay/src/: main.rs
crates/qyra-relay/src/db/: mod.rs
crates/qyra-relay/src/middleware/: mod.rs
crates/qyra-relay/src/routes/: agent.rs  auth.rs  mod.rs  skills.rs
crates/qyra-satellite/: Cargo.toml
crates/qyra-satellite/src/: main.rs
