[workspace]
members = [
    "crates/qyra-core",
    "crates/qyra-relay",
    "crates/qyra-satellite",
    "crates/qyra-frontend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Qyra Team"]
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config & env
dotenvy = "0.15"
config = "0.14"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Auth & crypto
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

# Database
surrealdb = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
