[package]
name = "qyra-relay"
version.workspace = true
edition.workspace = true

[dependencies]
qyra-core = { path = "../qyra-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
surrealdb = { workspace = true }
dotenvy = { workspace = true }
