[package]
name = "qyra-satellite"
version.workspace = true
edition.workspace = true

[dependencies]
qyra-core = { path = "../qyra-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
dotenvy = { workspace = true }
